# med-img-reader

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: index.js
src/med-img-reader/: CMakeLists.txt  MedImgReader.cxx  MedImgReader.h
src/med-img-reader/BRAINSTools/: CMakeLists.txt
test/: itkImageJSExample.js  t1.nrrd  test.js
